--- a/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/Main.form
@@ -3692,6 +3692,7 @@
                           </Properties>
                           <Events>
                             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblAudioMouseClicked"/>
+                            <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="tblAudioPropertyChange"/>
                           </Events>
                         </Component>
                       </SubComponents>
@@ -3721,7 +3722,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="10" y="360" width="300" height="-1"/>
+                      <AbsoluteConstraints x="10" y="379" width="300" height="30"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -3810,7 +3811,7 @@
                   </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="240" y="390" width="-1" height="-1"/>
+                      <AbsoluteConstraints x="240" y="410" width="-1" height="-1"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -3820,7 +3821,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="40" y="390" width="-1" height="-1"/>
+                      <AbsoluteConstraints x="40" y="410" width="-1" height="-1"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -3832,7 +3833,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="40" y="410" width="220" height="-1"/>
+                      <AbsoluteConstraints x="40" y="420" width="220" height="-1"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -3846,7 +3847,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="10" y="320" width="300" height="-1"/>
+                      <AbsoluteConstraints x="10" y="300" width="280" height="70"/>
                     </Constraint>
                   </Constraints>
                 </Component>
