--- a/DuAn01_G3_ebooks/src/com/ebooks/main/AudiosDiaLog.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/AudiosDiaLog.form
@@ -37,6 +37,9 @@
         </Property>
         <Property name="radius" type="int" value="25"/>
       </Properties>
+      <Events>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="pnlMainDialogMousePressed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="0" y="0" width="780" height="590"/>
@@ -104,6 +107,9 @@
           </Constraints>
         </Component>
         <Container class="com.ebooks.Compoment.MaterialTabbed" name="tabAudioSach">
+          <Events>
+            <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="tabAudioSachStateChanged"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="30" y="110" width="720" height="470"/>
