--- a/DuAn01_G3_ebooks/src/com/ebooks/main/BooksDiaLog.form
+++ b/DuAn01_G3_ebooks/src/com/ebooks/main/BooksDiaLog.form
@@ -37,6 +37,9 @@
         </Property>
         <Property name="radius" type="int" value="25"/>
       </Properties>
+      <Events>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="pnlMainBooksMousePressed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="0" y="0" width="900" height="550"/>
